import enum
import uuid
from datetime import datetime

from sqlalchemy import Boolean, DateTime, Enum, Float, ForeignKey, Integer, String, Text, func
from sqlalchemy.dialects.postgresql import JSONB, UUID
from sqlalchemy.orm import Mapped, mapped_column

from app.models.user import Base


class RuleType(str, enum.Enum):
    REGEX = "regex"
    KEYWORD = "keyword"
    LLM_PROMPT = "llm_prompt"


class FlagStatus(str, enum.Enum):
    FLAGGED = "flagged"
    REVIEWED = "reviewed"
    ACCEPTED = "accepted"
    REJECTED = "rejected"


class ExemptionRule(Base):
    __tablename__ = "exemption_rules"

    id: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4)
    state_code: Mapped[str] = mapped_column(String(2), index=True)
    category: Mapped[str] = mapped_column(String(100), index=True)
    rule_type: Mapped[RuleType] = mapped_column(
        Enum(RuleType, name="rule_type", create_type=False, values_callable=lambda e: [m.value for m in e])
    )
    rule_definition: Mapped[str] = mapped_column(Text)
    description: Mapped[str | None] = mapped_column(Text, nullable=True)
    enabled: Mapped[bool] = mapped_column(Boolean, default=True)
    version: Mapped[int] = mapped_column(Integer, default=1)
    created_by: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), ForeignKey("users.id"))
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), server_default=func.now())


class ExemptionFlag(Base):
    __tablename__ = "exemption_flags"

    id: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4)
    chunk_id: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), ForeignKey("document_chunks.id"), index=True)
    rule_id: Mapped[uuid.UUID | None] = mapped_column(UUID(as_uuid=True), ForeignKey("exemption_rules.id"), nullable=True, index=True)
    request_id: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), ForeignKey("records_requests.id"), index=True)
    category: Mapped[str] = mapped_column(String(100))
    matched_text: Mapped[str | None] = mapped_column(Text, nullable=True)
    confidence: Mapped[float] = mapped_column(Float, default=1.0)
    status: Mapped[FlagStatus] = mapped_column(
        Enum(FlagStatus, name="flag_status", create_type=False, values_callable=lambda e: [m.value for m in e]),
        default=FlagStatus.FLAGGED,
    )
    reviewed_by: Mapped[uuid.UUID | None] = mapped_column(UUID(as_uuid=True), ForeignKey("users.id"), nullable=True)
    reviewed_at: Mapped[datetime | None] = mapped_column(DateTime(timezone=True), nullable=True)
    review_reason: Mapped[str | None] = mapped_column(Text, nullable=True)
    created_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), server_default=func.now())

    # Phase 2 columns
    review_note: Mapped[str | None] = mapped_column(Text, nullable=True)
    detection_tier: Mapped[int | None] = mapped_column(Integer, nullable=True)
    detection_method: Mapped[str | None] = mapped_column(String(50), nullable=True)
    auto_detected: Mapped[bool] = mapped_column(Boolean, server_default="false")


class DisclosureTemplate(Base):
    __tablename__ = "disclosure_templates"

    id: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4)
    template_type: Mapped[str] = mapped_column(String(100))
    state_code: Mapped[str | None] = mapped_column(String(2), nullable=True)
    content: Mapped[str] = mapped_column(Text)
    version: Mapped[int] = mapped_column(Integer, default=1)
    updated_by: Mapped[uuid.UUID] = mapped_column(UUID(as_uuid=True), ForeignKey("users.id"))
    updated_at: Mapped[datetime] = mapped_column(DateTime(timezone=True), server_default=func.now())
